# C3-mose-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  INSTALL.md  LICENSE  README.md  SECURITY.md  config.toml  docker-compose.yml  luna-agent.service  mcp_servers.example.json  mcp_servers.json  mose-agent.service  mose-skill-review.service  mose-skill-review.timer  pyproject.toml  qwen3-server.service  signal-cli-daemon.service  worker-agent.service
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
docker/: check_pyproject.py
docker/arr-diagnostics/: Dockerfile  mcp-entrypoint-radarr.sh  mcp-entrypoint-sonarr.sh  requirements.txt
docker/arr-diagnostics/arr_diagnostics/: __init__.py  __main__.py  client.py  radarr_manual_import.py  radarr_mcp.py  sonarr_manual_import.py  sonarr_mcp.py
docker/arr-diagnostics/scripts/: sonarr_import_episode.py
docker/plex-mcp-ops-admin/: Dockerfile  mcp-entrypoint.sh
docker/plex-mcp-stack-automation/: Dockerfile  mcp-entrypoint.sh
docker/sandbox/: Dockerfile
docs/: index.html
luna/: __init__.py  __main__.py  agent.py  config.py  discord_bot.py  llm.py  mcp_manager.py  memory.py  observe.py  tool_output.py  tools.py
mose/: __init__.py  __main__.py  agent.py  bash_policy.py  config.py  discord_bot.py  learning.py  llm.py  mcp_manager.py  mcp_write_policy.py  memory.py  observe.py  signal_bot.py  tool_output.py  tools.py
mose/terminal/: __init__.py  base.py  docker.py  local.py
skills/: _overview.md  docker.md  drivepool.md  linux-ubuntu.md  nzbget.md  opnsense.md  plex.md  proxmox.md  radarr.md  sonarr.md  truenas.md
tests/: SMOKE_TESTS.md  test_agent.py  test_agent_mcp_inline.py  test_arr_diagnostics.py  test_bedrock.py  test_config.py  test_learning.py  test_llm.py  test_mcp_manager_config.py  test_mcp_write_policy.py  test_memory.py  test_signal_bot.py  test_terminal_docker.py  test_tool_output.py  test_tools.py
