[project]
name = "luna-agent"
version = "0.1.0"
description = "Luna - Custom minimal AI agent with memory, MCP tools, and Discord"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "openai>=1.0",
    "mcp[cli]",
    "sentence-transformers",
    "einops",
    "sqlite-vec",
    "tomli>=2.0;python_version<'3.11'",
    "html2text",
    "ddgs>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["luna*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
