[project]
name = "mose-agent"
version = "0.1.0"
description = "Mose - Custom minimal AI agent with memory, MCP tools, and Discord"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Phaedawg" },
]
keywords = ["ai", "agent", "llm", "mcp", "discord", "memory", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4,<3",
    "openai>=1.0,<3",
    "mcp[cli]>=1.0,<2",
    "sentence-transformers",
    "einops",
    "sqlite-vec",
    "tomli>=2.0;python_version<'3.11'",
    "html2text",
    "ddgs>=7.0",
    "docker>=7.0,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
cloud = ["boto3>=1.34"]
drivepool = ["pypsrp>=0.10"]
paper = ["arxiv>=2.0"]

[tool.setuptools.packages.find]
include = ["mose*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/phaelon74/C3-mose-agent"
Repository = "https://github.com/phaelon74/C3-mose-agent"
Issues = "https://github.com/phaelon74/C3-mose-agent/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
